ocp-argo-files/fake-transactions/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: 'store, keycloak, logstash'
    app.openshift.io/vcs-uri: 'https://github.com/mmartofel/fake-transactions.git'
  labels:
    app: fake-transactions
    app.kubernetes.io/component: fake-transactions
    app.kubernetes.io/instance: fake-transactions
    app.kubernetes.io/part-of: QUARKUS_API_SERVICE
    app.openshift.io/runtime: quarkus
  name: fake-transactions
spec:
  selector:
    matchLabels:
      deployment: fake-transactions
  template:
    metadata:
     labels:
      deployment: fake-transactions
    spec:
      containers:
      - env:
        - name: DBUSER
          valueFrom:
            configMapKeyRef:
              key: DBUSER
              name: postgres-configmap
        - name: DBCONNECT
          valueFrom:
            configMapKeyRef:
              key: DBCONNECT
              name: postgres-configmap
        - name: DBPASSWORD
          valueFrom:
            configMapKeyRef:
              key: DBPASSWORD
              name: postgres-configmap
        image: image-registry.openshift-image-registry.svc:5000/demoapp/fake-transactions:0.1
        imagePullPolicy: IfNotPresent
        name: fake-transactions
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
